k8s/apps/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-svc
  namespace: apps
spec:
  selector:
    app: website
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
